# matcher

./: .gitignore  Cargo.toml  README.md  flake.nix
src/: db.rs  main.rs  matching.rs  web.rs
templates/: add_person.html  error.html  head.html  header.html  index.html  matches.html  people.html  person.html  sign_in.html  sign_up.html
