[package]
name = "matcher"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = "0.5.3"
async-trait = "0.1.83"
axum = { version = "0.7.7", features = ["form"] }
axum-extra = { version = "0.9.4", features = ["cookie"] }
chrono = "0.4.38"
rusqlite = "0.32.1"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tera = "1.20.0"
tokio = { version = "1.40.0", features = ["rt-multi-thread"] }
uuid = { version = "1.10.0", features = ["v4"] }
